:fix head title format

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <i class="head-location-i fa-solid fa-location-dot"></i>Paris, Belleville
         </div> <!-- /.head-location -->
         <div class="head-title mrg-top-none">
-          <h2 class="head-title-h2">Réservez le menu qui vous convient</h2>
+          <h2 class="head__title">Réservez le menu qui vous convient</h2>
           <p class="head-subtitle-p pdg">
             Découvrez des restaurants d'exception, séléctionnés par nos soins.
           </p> <!-- /head-subtitle-p -->
