:fix: better name for CSS classes

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
              Item #1
         -->
         <div class="item">
-          <p class="circle">1</p>
-          <p>
+          <p class="item__circle">1</p>
+          <p class="item__description">
             <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
           </p>
         </div> <!-- /.item -->
@@ -77,8 +77,8 @@
              Item #2
         -->
         <div class="item">
-          <p class="circle">2</p>
-          <p>
+          <p class="item__circle">2</p>
+          <p class="item__description">
             <i class="fa-solid fa-list"></i>Composez votre menu
           </p>
         </div> <!-- /.item -->
@@ -86,9 +86,9 @@
             Item #3
         -->
         <div class="item">
-          <p class="circle">3</p>
-          <p>
-            <i class="fa-solid fa-store"></i>Dégustez au restaurant
+          <p class="item__circle">3</p>
+          <p class="item__description">
+            <i class="fa-solid fa-store"></i>Dégustez au restaurants
           </p>
         </div> <!-- /.item -->
       </section> <!-- /.features -->
