:feat: features.sass => features.css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="item">
           <p class="item__circle">1</p>
           <p class="item__description">
-            <i class="fa-solid fa-mobile-screen"></i>Choisissez un restaurant
+            <i class="item__icon fa-solid fa-mobile-screen"></i>Choisissez un restaurant
           </p>
         </div> <!-- /.item -->
         <!--
@@ -79,7 +79,7 @@
         <div class="item">
           <p class="item__circle">2</p>
           <p class="item__description">
-            <i class="fa-solid fa-list"></i>Composez votre menu
+            <i class="item__icon fa-solid fa-list"></i>Composez votre menu
           </p>
         </div> <!-- /.item -->
         <!--
@@ -88,7 +88,7 @@
         <div class="item">
           <p class="item__circle">3</p>
           <p class="item__description">
-            <i class="fa-solid fa-store"></i>Dégustez au restaurants
+            <i class="item__icon fa-solid fa-store"></i>Dégustez au restaurants
           </p>
         </div> <!-- /.item -->
       </section> <!-- /.features -->
