:feat: restaurant menu items animations on all menu pages.

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -56,78 +56,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-          <!--
-
-              Card #1 - Tartare de thon
-
-                @NOTE: To implement the hovering animation, we need to break the
-                       menu card into three parts. The two first part are displayed
-                       default. The third one is hidden. On `card_restaurant'
-                       hovering, the first two card spacing is reduced, to display
-                       the third one, with the green background & the check icon.
-          -->
-
-          <!-- First card part -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Tartare de thon</h3>
-              <p class="card--restaurant__description">
-                Assaisonné de yuzu
-              </p>
-            </div> <!-- /.card -->
-
-            <!-- Second card part -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">20€</p>
-            </div> <!-- /.card .card-price -->
-
-            <!-- Third card part -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Entrée #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Tartare de thon</span>
+              <div class="menu-item__subtitle">
+                  Assaisonné de yuzu
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">20€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-          <!--
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-              Card #2 - Bouchée de homard croustillant
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Bouchée de homard croustillant</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Bouchée de homard croustillant</span>
+              <div class="menu-item__subtitle">
                 Et sa farandole de petits légumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-          <!--
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-              Card #3 - Velouté de cèpes
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Velouté de cèpes</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Velouté de cèpes</span>
+              <div class="menu-item__subtitle">
                 Aux truffes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
 
@@ -139,68 +114,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-          <!--
-
-              Card #1 - Poulet rôti aux herbes de provence
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Poulet rôti aux herbes de provence</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Poulet rôti aux herbes de provence</span>
+              <div class="menu-item__subtitle">
                 Et sa crême de truffe
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Langoustine rôtie
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Langoustine rôtie</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Langoustine rôtie</span>
+              <div class="menu-item__subtitle">
                 Et ses légumes de saison
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">35€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">35€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Côte de boeuf angus
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Côte de boeuf angus</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Côte de boeuf angus</span>
+              <div class="menu-item__subtitle">
                 Et sa purée de panais
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">35€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">35€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
 
@@ -212,69 +172,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-
-          <!--
-
-              Card #1 - Farandole de desserts
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Farandole de desserts</h3>
-              <p class="card--restaurant__description">
+          <!-- Dessert #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Farandole de desserts</span>
+              <div class="menu-item__subtitle">
                 Du chef
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">18€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">18€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Crême brulée
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Crême brûlée</h3>
-              <p class="card--restaurant__description">
+          <!-- Dessert #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Crême brulée</span>
+              <div class="menu-item__subtitle">
                 Revisitée
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">22€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">22€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Tiramisu
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Tiramisu</h3>
-              <p class="card--restaurant__description">
+          <!-- Dessert #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Tiramisu</span>
+              <div class="menu-item__subtitle">
                 A la noisette
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">23€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">23€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
               Buy button
