--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -60,77 +60,54 @@
             Entrées
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
-          <!--
 
-              Card #1 - Tartare de poulpe acidulé
-
-                @NOTE: To implement the hovering animation, we need to break the
-                       menu card into three parts. The two first part are displayed
-                       default. The third one is hidden. On `card_restaurant'
-                       hovering, the first two card spacing is reduced, to display
-                       the third one, with the green background & the check icon.
-          -->
-
-          <!-- First card part -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Tartare de poulpe acidulé</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Tartare de poulpe acidulé</span>
+              <div class="menu-item__subtitle">
                 Aux zests d'orange
-              </p>
-            </div> <!-- /.card -->
-
-            <!-- Second card part -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-
-            <!-- Third card part -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-          <!--
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-              Card #2 - Velouté de légumes d'antan
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Bouchée de homard croustillant</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Velouté de légumes d'antan</span>
+              <div class="menu-item__subtitle">
                 Carrote, panais, topinambour
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">35€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-          <!--
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-              Card #3 - Soupe à l'oignon
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Soupe à l'oignon</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Soupe à l'oignon</span>
+              <div class="menu-item__subtitle">
                 Revisitée
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">20€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">20€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
 
@@ -142,68 +119,54 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-          <!--
-
-              Card #1 - Coquilles Saint-Jacques
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Coquilles Saint-Jacques</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Coquilles Saint-Jacques</span>
+              <div class="menu-item__subtitle">
                 Accompagnées d'une purée de panais
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Magret de canard
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Magret de canard</h3>
-              <p class="card--restaurant__description">
-                Et parmentier de pommes de terres
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">35€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Plat #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Magret de canard</span>
+              <div class="menu-item__subtitle">
+                 Et parmentier de pommes de terres
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">35€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Pigeonneau d'Ile-et-Vilaine
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Pigeonneau d'Ile-et-Vilaine</h3>
-              <p class="card--restaurant__description">
-                Sur son lit de gnocchis aux légumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">44€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Plat #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Pigeonneau d'Ile-et-Vilaine</span>
+              <div class="menu-item__subtitle">
+                 Sur son lit de gnocchis aux légumes
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">44€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
+
 
           <!--
 
@@ -215,69 +178,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-
-          <!--
-
-              Card #1  - Pétales de violettes glaçées
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Pétales de violettes glaçées</h3>
-              <p class="card--restaurant__description">
-                Et purée de noisettes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">18€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Pétales de violettes glaçées</span>
+              <div class="menu-item__subtitle">
+                 Et purée de noisettes
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">18€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Fondant au chocolat
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Fondant au chocolat</h3>
-              <p class="card--restaurant__description">
-                Revisité
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">22€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Fondant au chocolat</span>
+              <div class="menu-item__subtitle">
+                 Revisité
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">22€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Tiramisu
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Tiramisu</h3>
-              <p class="card--restaurant__description">
-                Myrtilles et pâte d'amande
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">23€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Tiramisu</span>
+              <div class="menu-item__subtitle">
+                 Myrtilles et pâte d'amande
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">23€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
               Buy button
