--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -55,98 +55,69 @@
           <div class="category__line overall-restaurant-pres-margin"></div>
         </div> <!-- /.menu-card-category-div -->
 
-        <!--
-
-            Card #1 - Ravioles de foie gras
-
-              @NOTE: To implement the hovering animation, we need to break the
-                     menu card into three parts. The two first part are displayed
-                     default. The third one is hidden. On `card_restaurant'
-                     hovering, the first two card spacing is reduced, to display
-                     the third one, with the green background & the check icon.
-        -->
-
-        <!-- First card part -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Ravioles de foie gras</h3>
-            <p class="card--restaurant__description">
+        <!-- Entrée #1 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Ravioles de foie gras</span>
+            <div class="menu-item__subtitle">
               Accompagnés de leur crême à la truffe
-            </p>
-          </div> <!-- /.card -->
-
-          <!-- Second card part -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">25€</p>
-          </div> <!-- /.card .card-price -->
-
-          <!-- Third card part -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">25€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
-        <!--
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-            Card #2 - Caviar osciètre
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Caviar osciètre</h3>
-            <p class="card--restaurant__description">
-              Sur blini à la farine de blé noir
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">35€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+        <!-- Entrée #2 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Caviar osciètre</span>
+            <div class="menu-item__subtitle">
+               Sur blini à la farine de blé noir
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">35€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
-        <!--
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-            Card #3 - Homard et espuma de langoustine
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Homard et espuma de langoustine</h3>
-            <p class="card--restaurant__description">
-              Mariée aux zests d'orange
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">20€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+        <!-- Entrée #3 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Homard et espuma de langoustine</span>
+            <div class="menu-item__subtitle">
+               Mariée aux zests d'orange
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">20€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-        <!--
-
-            Card #4 - Foie gras
-
-        -->
-        <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Foie gras de canard cuit entier</h3>
-            <p class="card--restaurant__description">
-              Confiture de figue et pain toasté
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">40€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+        <!-- Entrée #4 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Foie gras de canard cuit entier</span>
+            <div class="menu-item__subtitle">
+               Confiture de figue et pain toasté
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">40€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
         <!--
 
@@ -158,68 +129,53 @@
           <div class="category__line overall-restaurant-pres-margin"></div>
         </div> <!-- /.menu-card-category-div -->
 
-        <!--
-
-            Card #1 - Saint Jacques
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Noix de coquille Saint Jacques</h3>
-            <p class="card--restaurant__description">
-              Sur lit de purée celeri-rave
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">40€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+        <!-- Plat #1 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Noix de coquille Saint Jacques</span>
+            <div class="menu-item__subtitle">
+               Sur lit de purée celeri-rave
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">40€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-        <!--
-
-            Card #2 - Langoustine
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Langoustine poelée</h3>
-            <p class="card--restaurant__description">
-              Purée de patate douce
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">35€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+        <!-- Plat #2 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Langoustine poelée</span>
+            <div class="menu-item__subtitle">
+               Purée de patate douce
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">35€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-        <!--
-
-            Card #3 - Mijoté de queue de boeuf
-
-        -->
-        <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Mijoté de queue de boeuf</h3>
-            <p class="card--restaurant__description">
+        <!-- Plat #3 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Mijoté de queue de boeuf</span>
+            <div class="menu-item__subtitle">
               Et riz sauvage aux zests de citron
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">44€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">44€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
         <!--
 
@@ -231,68 +187,53 @@
           <div class="category__line overall-restaurant-pres-margin"></div>
         </div> <!-- /.menu-card-category-div -->
 
-        <!--
-
-            Card #1 - Macaron noisette et chocolat
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Macaron noisette et chocolat</h3>
-            <p class="card--restaurant__description">
+        <!-- Dessert #1 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Macaron noisette et chocolat</span>
+            <div class="menu-item__subtitle">
               Glace au caramel brun et sel de Guérande
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">18€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">18€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-        <!--
-
-            Card #2 - Baba au rhum
-
-        -->
-        <div class="card-restaurant-container d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Baba au rhum revisité</h3>
-            <p class="card--restaurant__description">
+        <!-- Dessert #2 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Baba au rhum revisité</span>
+            <div class="menu-item__subtitle">
               Avec son coulis de citron
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__pric__text">22€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">22€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
-        <!--
-
-            Card #3 - Tarte au citron
-
-        -->
-        <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-          <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                      restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-            <h3 class="card--restaurant__title">Tarte au citron meringuée</h3>
-            <p class="card--restaurant__description">
+        <!-- Dessert #3 -->
+        <article class="menu-item card d-flex">
+          <div class="menu-item__title">
+            <span class="medium">Tarte au citron meringuée</span>
+            <div class="menu-item__subtitle">
               Destructurée
-            </p>
-          </div> <!-- /.card -->
-          <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-            <p class="card--restaurant__price__text">23€</p>
-          </div> <!-- /.card .card-price -->
-          <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+            </div> <!-- /.subtitle -->
+          </div> <!-- ./__title -->
+          <div class="menu-item__price">
+            <span class="medium">23€</span>
+          </div> <!-- /__price -->
+          <div class="menu-item__icon">
             <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!--/.card .card-hovered-area -->
-        </div> <!-- ./card-restaurant-container card-flex -->
+          </div> <!-- /.__icon -->
+        </article> <!-- /.menu-item -->
 
         <!--
             Buy button
