--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -57,79 +57,53 @@
             <div class="category__line  overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-          <!--
-
-              Card #1 - Fricassée d'escargot
-
-                @NOTE: To implement the hovering animation, we need to break the
-                       menu card into three parts. The two first part are displayed
-                       default. The third one is hidden. On `card_restaurant'
-                       hovering, the first two card spacing is reduced, to display
-                       the third one, with the green background & the check icon.
-          -->
-
-          <!-- First card part -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Fricassée d'escargot</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Fricassée d'escargot</span>
+              <div class="menu-item__subtitle">
                 Au piment d'espelette
-              </p>
-            </div> <!-- /.card -->
-
-            <!-- Second card part -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">25€</p>
-            </div> <!-- /.card .card-price -->
-
-            <!-- Third card part -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">25€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Foie gras de canard mi-cuit
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Foie gras de canard mi-cuit</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Foie gras de canard mi-cuit</span>
+              <div class="menu-item__subtitle">
                 Et ses copeaux de truffe noire
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">35€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">35€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Oeuf au plat
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Oeuf au plat</h3>
-              <p class="card--restaurant__description">
+          <!-- Entrée #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Oeuf au plat</span>
+              <div class="menu-item__subtitle">
                 Assaisonné à la truffe sur lit de crême
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">20€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">20€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
 
@@ -141,68 +115,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-          <!--
-
-              Card #1 - Filet de boeuf aux herbes
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Filet de beauf aux herbes</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Filet de boeuf aux herbes</span>
+              <div class="menu-item__subtitle">
                 Accompagné de sa ribambelle de légumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">20€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">20€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Parmentier de queue de boeuf
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Parmentier de queue de boeuf</h3>
-              <p class="card--restaurant__description">
+          <!-- Plat #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Parmentier de queue de boeuf</span>
+              <div class="menu-item__subtitle">
                 Accompagné de sa ribambelle de légumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">20€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">44€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Filet de turbot
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Filet de Turbot</h3>
-              <p class="card--restaurant__description">
-                Aux agrumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">44€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Plat #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Filet de Turbot</span>
+              <div class="menu-item__subtitle">
+                 Aux agrumes
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">44€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
 
@@ -214,69 +173,53 @@
             <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
-
-          <!--
-
-              Card #1 - Paris-Brest
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Paris-Brest</h3>
-              <p class="card--restaurant__description">
-                Revisité
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">18€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #1 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Paris-Brest</span>
+              <div class="menu-item__subtitle">
+                 Revisité
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">18€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #2 - Macaron
-
-          -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Macaron au chocolat d'exception</h3>
-              <p class="card--restaurant__description">
-                Et glâce à la vanille de Madagascar
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">18€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #2 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Macaron au chocolat d'exception</span>
+              <div class="menu-item__subtitle">
+                 Et glâce à la vanille de Madagascar
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">18€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
-          <!--
-
-              Card #3 - Macaron
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card--restaurant__title">Mousse au chocolat</h3>
-              <p class="card--restaurant__description">
-                Au piment d'espelette et à la truffe noire
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card--restaurant__price__text">23€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+          <!-- Dessert #3 -->
+          <article class="menu-item card d-flex">
+            <div class="menu-item__title">
+              <span class="medium">Mousse au chocolat</span>
+              <div class="menu-item__subtitle">
+                 Au piment d'espelette et à la truffe noire
+              </div> <!-- /.subtitle -->
+            </div> <!-- ./__title -->
+            <div class="menu-item__price">
+              <span class="medium">23€</span>
+            </div> <!-- /__price -->
+            <div class="menu-item__icon">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
+            </div> <!-- /.__icon -->
+          </article> <!-- /.menu-item -->
 
           <!--
               Buy button
