:feat: hompage loader animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="css/card_one.css" />
   </head>
   <body>
+
+    <!--
+
+        Loader
+
+    -->
+    <div class="loader">
+      <img src="assets/loader.gif" />
+    </div>
+
     <!--
 
         Page header
